<resources>
    <string name="app_name">APOD Browser</string>

    <!-- Feature title -->
    <string name="feature_title_latest">Latest</string>
    <string name="feature_title_bookmarks">Bookmarks</string>
    <string name="feature_title_settings">Settings</string>

    <!-- Content description -->
    <string name="apod_image_description">Apod\'s image</string>
    <string name="navigate_up_description">Navigate up</string>
    <string name="close_button_description">Close</string>

    <!-- Latest -->
    <string name="content_description_item_options">Item options</string>
    <string name="latest_feed_explore_hint">Discover the cosmos! Dive into APOD\'s vast image library.</string>
    <string name="latest_feed_explore_hint_clickable_text">Dive</string>
    <string name="action_title_refresh">Refresh</string>
    <string name="action_title_official_website">Official website</string>
    <string name="latest_error_title">Something went wrong…</string>
    <string name="latest_error_message">Please try again later.</string>
    <string name="latest_error_button_title">Try again</string>

    <!-- Explore -->
    <string name="feature_title_explore">Explore</string>
    <string name="explore_option_title_random_pick">Random pick</string>
    <string name="explore_option_title_calendar">Calendar</string>
    <string name="explore_option_title_official_archive">Official archive</string>

    <!-- Bookmarks -->
    <string name="action_title_search_bookmarks">Search bookmarks</string>
    <string name="bookmarks_empty_title">No bookmarks</string>
    <string name="bookmarks_empty_message">Your bookmarks will appear here.</string>
    <string name="bookmarks_empty_search_message">No matching bookmarks found.</string>

    <!-- Detail -->
    <string name="image_copyright_action_title">Image credits</string>
    <string name="add_to_bookmarks_description">Add to bookmarks</string>
    <string name="remove_from_bookmarks_description">Remove from bookmarks</string>
    <string name="image_copyright_sheet_title">Image Credit &amp; Copyright</string>
    <string name="image_copyright_hint_text">For copyright details (when available), visit this APOD page.</string>
    <string name="mage_copyright_hint_clickable_text">APOD page</string>
    <string name="message_bookmark_added">Bookmarked</string>
    <string name="message_bookmark_removed">Removed from bookmarks</string>

    <!-- Image detail -->
    <string name="download_image_action_title">Download image</string>
    <string name="message_image_unavailable">Image not available</string>
    <string name="message_image_download_completed">Image added to gallery</string>
    <string name="preparing_image_dialog_title">Preparing image. Please wait…</string>

    <!-- Settings -->
    <string name="preference_category_title_storage">Storage</string>
    <string name="preference_title_image_cache">Clear image cache</string>
    <string name="preference_summary_image_cache">%s of storage in use</string>
    <string name="dialog_title_clear_image_cache">Clear image cache</string>
    <string name="dialog_message_clear_image_cache">To optimize your experience, APOD Browser stores images for faster access. Clearing the image cache will free up storage space by removing these stored images. This may result in slightly longer loading times for images the next time you view them.</string>
    <string name="message_image_cache_cleared">Image cache cleared</string>
    <string name="preference_category_title_app_info">App info</string>
    <string name="preference_title_app_version">Version</string>

    <!-- Common: Message -->
    <string name="message_unexpected_error_occurred">Unexpected error occurred</string>

    <!-- Common: Action title -->
    <string name="open_action_title">Open</string>
    <string name="open_image_action_title">Open image</string>
    <string name="play_video_action_title">Play video</string>
    <string name="open_in_browser_action_title">Open in browser</string>
    <string name="share_action_title">Share</string>

    <!-- Date -->
    <string name="date_today">Today</string>
    <string name="date_one_year_ago">1 year ago</string>
    <string name="date_years_ago_format">%d years ago</string>
    <string name="date_one_month_ago">1 month ago</string>
    <string name="date_months_ago_format">%d months ago</string>
    <string name="date_one_week_ago">1 week ago</string>
    <string name="date_weeks_ago_format">%d weeks ago</string>
    <string name="date_one_day_ago">1 day ago</string>
    <string name="date_days_ago_format">%d days ago</string>

    <!-- URL -->
    <string name="apod_url_format">https://apod.nasa.gov/apod/ap%s.html</string>
    <string name="archive_url">https://apod.nasa.gov/apod/archivepix.html</string>
    <string name="apod_home_url">https://apod.nasa.gov/apod/</string>

    <!-- Example -->
    <string name="example_apod_title">Autumn Moon Encore</string>
    <string name="example_apod_media_type">Image</string>
    <string name="example_apod_date">December 15, 2005</string>
    <string name="example_apod_explanation">Near its northernmost declination, tonight\'s Full Moon will be a special one, arcing high in northern hemisphere skies. But a Full Moon won\'t occur on this calendar date for another 19 years, a period known as the lunar Metonic cycle. September 15th\'s lunar phase and date were notable too, marking the return of a gibbous Moon rising over the High Sierra mountains. That scene was captured in Ansel Adams\' famous photograph Autumn Moon from Glacier Point, Yosemite National Park. Earlier this year, Texas State University physicists Donald Olson, Russell Doescher and students were able to pinpoint the location and (formerly uncertain) date the original Ansel Adams photo was taken - September 15, 1948. Accordingly, their astronomical detective work predicted that the lunar alignment and waxing gibbous phase would be repeated on Thursday, September 15, 2005, exactly three 19-year Metonic cycles later. On that day, about 300 photographers gathered at Glacier Point to record Ansel Adams\' Autumn Moon encore.</string>
    <string name="example_apod_copyright">Russell Doescher (Texas State University)</string>
</resources>