<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory android:title="@string/preference_category_title_storage">

        <Preference
            android:icon="@drawable/ic_storage"
            android:title="@string/preference_title_image_cache"
            android:key="image_cache"
            tools:summary="10MB of storage in use" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_title_app_info">

        <Preference
            android:icon="@drawable/ic_info"
            android:key="app_version"
            android:title="@string/preference_title_app_version"
            tools:summary="stable-1.0" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>