<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.overflow.OverflowLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/navigate_up_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/navigate_up_description"
        app:icon="@drawable/ic_arrow_back"
        app:layout_overflowIcon="@drawable/ic_arrow_back"
        app:layout_overflowText="@string/navigate_up_description" />

    <Button
        android:id="@+id/bookmark_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_to_bookmarks_action_title"
        app:icon="@drawable/ic_bookmark_border"
        app:layout_overflowIcon="@drawable/ic_bookmark_border"
        app:layout_overflowText="@string/add_to_bookmarks_action_title" />

    <Button
        android:id="@+id/play_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play_video_action_title"
        app:icon="@drawable/ic_play_circle"
        app:layout_overflowIcon="@drawable/ic_play_circle"
        app:layout_overflowText="@string/play_video_action_title" />

    <Button
        android:id="@+id/open_image_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/open_image_action_title"
        app:icon="@drawable/ic_image"
        app:layout_overflowIcon="@drawable/ic_image"
        app:layout_overflowText="@string/open_image_action_title" />

    <Button
        android:id="@+id/open_in_browser_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/open_in_browser_action_title"
        app:icon="@drawable/ic_open_in_browser"
        app:layout_overflowIcon="@drawable/ic_open_in_browser"
        app:layout_overflowText="@string/open_in_browser_action_title" />

    <Button
        android:id="@+id/copyright_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_copyright_action_title"
        app:icon="@drawable/ic_info"
        app:layout_overflowIcon="@drawable/ic_info"
        app:layout_overflowText="@string/image_copyright_action_title" />

    <Button
        android:id="@+id/share_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share_action_title"
        app:icon="@drawable/ic_share"
        app:layout_overflowIcon="@drawable/ic_share"
        app:layout_overflowText="@string/share_action_title" />

</com.google.android.material.overflow.OverflowLinearLayout>