<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_label"
        style="@style/TextAppearance.HeadlineSmall.Sheet.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_sheet_title_top"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/feature_title_explore"
        app:layout_constraintEnd_toStartOf="@+id/close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/close_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_extra_small"
        android:contentDescription="@string/close_button_description"
        app:icon="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_label" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_extra_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close_button" />

    <LinearLayout
        android:id="@+id/highlighted_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <Button
            android:id="@+id/calendar_button"
            style="@style/Widget.Button.Sheet.Option.Emphasized"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/explore_option_title_calendar"
            app:icon="@drawable/ic_calendar_month" />

        <Button
            android:id="@+id/random_pick_button"
            style="@style/Widget.Button.Sheet.Option.Emphasized"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="1"
            android:text="@string/explore_option_title_random_pick"
            app:icon="@drawable/ic_casino" />

    </LinearLayout>

    <TextView
        android:id="@+id/official_archive_label"
        style="@style/Widget.Button.Sheet.Option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_regular"
        android:text="@string/explore_option_title_official_archive"
        app:drawableStartCompat="@drawable/ic_inventory_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highlighted_options" />

</androidx.constraintlayout.widget.ConstraintLayout>