<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="@dimen/large_icon"
            android:layout_height="@dimen/large_icon"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_cloud_off" />

        <TextView
            style="@style/TextAppearance.HeadlineSmall.MediumWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/latest_error_title"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/latest_error_message"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceBodyMedium"
            android:textColor="?android:textColorSecondary" />

        <Button
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/latest_error_button_title" />

    </LinearLayout>

</FrameLayout>