<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_extra_small"
        android:layout_marginStart="@dimen/margin_regular"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/date_label"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_label"
        app:shapeAppearance="?attr/shapeAppearanceCornerExtraSmall"
        tools:src="@drawable/bm_example_apod" />

    <TextView
        android:id="@+id/title_label"
        style="@style/TextAppearance.BodyMedium.MediumWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_sheet_title_top"
        android:layout_marginEnd="@dimen/margin_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/example_apod_title" />

    <TextView
        android:id="@+id/media_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBodySmall"
        app:layout_constraintStart_toStartOf="@id/title_label"
        app:layout_constraintTop_toBottomOf="@id/title_label"
        tools:text="Image" />

    <View
        android:id="@+id/info_separator"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_extra_small"
        android:background="@drawable/circle_separator"
        app:layout_constraintBottom_toBottomOf="@id/media_type_label"
        app:layout_constraintStart_toEndOf="@id/media_type_label"
        app:layout_constraintTop_toTopOf="@id/media_type_label" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_extra_small"
        android:textAppearance="?attr/textAppearanceBodySmall"
        app:layout_constraintEnd_toEndOf="@id/title_label"
        app:layout_constraintStart_toEndOf="@id/info_separator"
        app:layout_constraintTop_toBottomOf="@id/title_label"
        tools:text="@string/example_apod_date" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        app:layout_constraintEnd_toEndOf="@id/title_label"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/date_label" />

    <TextView
        android:id="@+id/open_label"
        style="@style/Widget.Button.Sheet.Option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/open_action_title"
        app:drawableStartCompat="@drawable/ic_open_in_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/open_in_browser_label"
        style="@style/Widget.Button.Sheet.Option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_in_browser_action_title"
        app:drawableStartCompat="@drawable/ic_open_in_browser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_label" />

    <TextView
        android:id="@+id/open_image_label"
        style="@style/Widget.Button.Sheet.Option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_image_action_title"
        app:drawableStartCompat="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_in_browser_label" />

    <TextView
        android:id="@+id/share_label"
        style="@style/Widget.Button.Sheet.Option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_regular"
        android:text="@string/share_action_title"
        app:drawableStartCompat="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_image_label" />

</androidx.constraintlayout.widget.ConstraintLayout>