<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_label"
        style="@style/TextAppearance.HeadlineSmall.Sheet.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_regular"
        android:layout_marginTop="@dimen/sheet_title_top_margin"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/image_copyright_sheet_title"
        app:layout_constraintEnd_toStartOf="@+id/close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/close_button"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_extra_small"
        app:icon="@drawable/ic_close"
        android:contentDescription="@string/close_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_label" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_extra_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close_button" />

    <TextView
        android:id="@+id/copyright_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintEnd_toEndOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:text="@string/example_apod_copyright" />

    <com.google.android.material.card.MaterialCardView
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/copyright_label">

        <TextView
            android:id="@+id/copyright_hint_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_regular"
            android:drawablePadding="@dimen/padding_small"
            android:text="@string/image_copyright_hint_text"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:drawableStartCompat="@drawable/ic_info" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>